simple-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: simple-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-fe
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: simple-be
                port:
                  number: 3000
